--- a/templates/about.html
+++ b/templates/about.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <title>Text Utils-Results </title>
+    <title>MagicText-About </title>
     <!-- Favicon-->
-    <link rel="shortcut icon" href="https://codewithharry.com/static/photo.png">
+    <link rel="shortcut icon" href="http://icons.iconarchive.com/icons/pixelkit/swanky-outlines/128/02-File-icon.png">
     <style>
 .footer {
    position: fixed;
@@ -33,6 +33,10 @@
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
 }
+.center
+{
+background-color:red;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -43,19 +47,20 @@
 
 </style>
   </head>
-  <body>
+  <body style="background-color: #DAE0E2;">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">TextUtils.in</a>
+  <img width="50" height="50" src="http://icons.iconarchive.com/icons/pixelkit/swanky-outlines/128/02-File-icon.png" class="custom-logo" alt="logo">
+  <a class="navbar-brand" href="/">MagicText</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about">About Us</a>
+        <a class="nav-link" href="/">Home </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/about">About Us <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/contact">Contact Us</a>
@@ -68,34 +73,19 @@
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
   </form>
 </nav>
-<br><br>
 
 
-
-<div class="row row-cols-1 row-cols-md-2">
-  <div class="col mb-4">
-    <div class="card" style="width: 18rem;">
-      <img src="https://i.imgur.com/2iebfx0.gif" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">TextUtils</h5>
-        <p class="card-text">TextUtils helping you.If you want to help related to TextUtils so click here. </p>
-        <a href="/contact" class="btn btn-primary">Contact</a>
-      </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <div class="alert alert-primary" role="alert">
+      About MagicText
     </div>
+    <p class="lead">This is a MagicText. Their is plateform which can change the text one from another like as normal text change into capital letter, remove punctuations, remove extra space or extra line, remove number, remove uppercase latter all the word done from MagicText.</p>
   </div>
-  <div class="col mb-4">
-    <div class="card text-white bg-dark mb-4" style="width: 60rem; height: 26rem;">
-      <div class="card-body">
-        <h5 class="card-title">About TextUtils</h5>
-        <p class="card-text">This is a TextUtils. Their is plateform which can change the text one from another like as normal text change into capital letter, remove punctuations, remove extra space or extra line, remove number, remove uppercase latter all the word done from TextUtils.</p>
-      </div>
-    </div>
-  </div>
-</div>
-
+</div><br>
 <footer class="footer">
   <div class="container">
-    <span class="text-light">&#169 2019 Textutils.in </span>
+    <span class="text-light">&#169 2019 MagicText </span>
   </div>
 </footer>
 
