--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <title>Text Utils-Results </title>
+    <title>MagicText-Result </title>
     <!-- Favicon-->
-    <link rel="shortcut icon" href="https://codewithharry.com/static/photo.png">
+    <link rel="shortcut icon" href="http://icons.iconarchive.com/icons/pixelkit/swanky-outlines/128/02-File-icon.png">
     <style>
 .footer {
    position: fixed;
@@ -32,14 +32,15 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">TextUtils.in</a>
+  <img width="50" height="50" src="http://icons.iconarchive.com/icons/pixelkit/swanky-outlines/128/02-File-icon.png" class="custom-logo" alt="logo">
+  <a class="navbar-brand" href="/">MagicText</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/about">About Us</a>
@@ -80,7 +81,7 @@
 </div>
 <footer class="footer">
   <div class="container">
-    <span class="text-light">&#169 2019 Textutils.in </span>
+    <span class="text-light">&#169 2019 MagicText </span>
   </div>
 </footer>
 
