--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <title>Text Utils-Results </title>
+    <title>MagicText-Contact </title>
     <!-- Favicon-->
-    <link rel="shortcut icon" href="https://codewithharry.com/static/photo.png">
+    <link rel="shortcut icon" href="http://icons.iconarchive.com/icons/pixelkit/swanky-outlines/128/02-File-icon.png">
     <style>
 .footer {
    position: fixed;
@@ -45,19 +45,20 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">TextUtils.in</a>
+  <img width="50" height="50" src="http://icons.iconarchive.com/icons/pixelkit/swanky-outlines/128/02-File-icon.png" class="custom-logo" alt="logo">
+  <a class="navbar-brand" href="/">MagicText</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About Us <span class="sr-only">(current)</span></a>
+      </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About Us</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="/contact">Contact Us</a>
       </li>
 
@@ -68,32 +69,38 @@
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
   </form>
 </nav>
-<form action="https://formspree.io/tanujwagadre.11@gmail.com" method="POST">
-    <div class="form-group">
-        <label for="formGroupExampleInput">Name</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" name="name" placeholder="Input Full Name">
-      </div>
-    <div class="form-group">
-      <label for="exampleFormControlInput1">Email address</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="name@example.com">
-    </div>
-    <div class="form-group">
-        <label for="formGroupExampleInput">Number</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" name="mobile" placeholder="Input Number">
-      </div>
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Message</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" name="Message" rows="3"></textarea>
-    </div>
-    <button type="submit" value="send" class="btn btn-primary">Submit</button>
-  </form>
 
+
+  
+<div class="container">
+<h3>Contact MagicText Admin</h3>
+<form action="https://formspree.io/tanujwagadre.11@gmail.com" method="post">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name" name="name" aria-describedby="name">
+  </div>
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
+    <small id="emailHelp" class="form-text-text-muted">we'll never share your email with anyone else</small>
+  </div>
+  <div class="form-group">
+    <label for="phone">Phone Number</label>
+    <input type="phone" class="form-control" name="phone" id="phone">
+  </div>
+  <div class="form-group">
+    <label for="content">Describe Your Issue :</label>
+    <textarea class="form-control" name="content" id="content" cols="30" rows="5"></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+</div><br><br>
   
 
 
   <footer class="footer">
     <div class="container">
-      <span class="text-light">&#169 2019 Textutils.in </span>
+      <span class="text-light">&#169 2019 MagicText </span>
     </div>
   </footer>
   
