--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,12 @@
     <!--Typed.js-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/typed.js"></script>
 
-    <title>Text Utils</title>
+    <title>MagicText-Home</title>
     <!-- Favicon-->
-    <link rel="shortcut icon" href="https://codewithharry.com/static/photo.png">
+    <link rel="shortcut icon" type="image/x-icon" href="http://icons.iconarchive.com/icons/pixelkit/swanky-outlines/128/02-File-icon.png" />
+    
+    <script data-ad-client="ca-pub-3937972638050197" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <style>
 		.footer {
    		position: fixed;
@@ -28,7 +31,8 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">TextUtils.in</a>
+  <img width="50" height="50" src="http://icons.iconarchive.com/icons/pixelkit/swanky-outlines/128/02-File-icon.png" href="" class="custom-logo" alt="logo">
+  <a class="navbar-brand" href="/">MagicText</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -54,7 +58,7 @@
 
 
 <div class="alert alert-success alert-dismissible fade show" role="alert">
-  <strong>Welcome to TextUtils!</strong> You can do anything with your text here!
+  <strong>Welcome to MagicText!</strong> You can do anything with your text here!
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -115,6 +119,7 @@
 <button type="submit" class="btn btn-dark mt-2">Analyze Text</button>
     </form>
 </div>
+<br><br>
  <!-- Typed.js DONT TOUCH THIS! --> 
  <div id="typed-strings">
   </div>
@@ -134,7 +139,7 @@
   <!-- Footer-->
 <footer class="footer">
   <div class="container">
-    <span class="text-light">&#169 2019 Textutils.in </span>
+    <span class="text-light">&#169 2019 MagicText </span>
   </div>
 </footer>
 
